Manifest/Pod-NS-Policy/dhondhu.yml
apiVersion: v1
kind: Pod
metadata:
  name: dhondhu-pod
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-container
    ports:
    - containerPort: 80
  - image: linuxserver/firefox
    name: firefox-container
    ports:
    - containerPort: 3000
