Manifest/Pod-NS-Policy/pod-firefox.yml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  namespace: default
spec:
  containers:
  - image: linuxserver/firefox
    name: firefox-container
    ports:
    - containerPort: 3000
