Manifest/Pod-NS-Policy/pod-nginx.yml
apiVersion: v1
kind: Pod
metadata:
 name: nginx-pod
 namespace: default
 labels:
    app: nginx
    name: nginx-pod
spec:
  volumes: 
  - name: new-volume
    emptyDir:
      sizeLimit: 1Gi
  containers:
  - image: nginx
    name: nginx-container
    ports:
    - containerPort: 80
